Build taskchamp_2025-07-22T07-34-14.txt

Showing Recent Errors Only

Build target taskchampShared of project taskchamp with configuration Debug

SwiftCompile normal arm64 Compiling\ FileService.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift (in target 'taskchampShared' from project 'taskchamp')

Failed frontend command:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift-frontend -frontend -c /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Models/AWSConfig.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Models/TCFilter.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Models/TCTask.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/DBService.swift -primary-file /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/NLPService.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/NotificationService.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/TaskchampionService.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Utilities/SFSymbols.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Utilities/TCError.swift /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Utilities/TasksHelper.swift -emit-dependencies-path /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/Objects-normal/arm64/FileService.d -emit-const-values-path /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/Objects-normal/arm64/FileService.swiftconstvalues -emit-reference-dependencies-path /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/Objects-normal/arm64/FileService.swiftdeps -serialize-diagnostics-path /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/Objects-normal/arm64/FileService.dia -target arm64-apple-ios17.0 -Xllvm -aarch64-use-tbi -enable-objc-interop -stack-check -cxx-interoperability-mode\=default -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS18.5.sdk -I /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Products/Debug-iphoneos -I /Users/emiller/src/personal/taskchamp -F /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Products/Debug-iphoneos -F /Users/emiller/src/personal/taskchamp/Tuist/.build/artifacts/soulvercore/SoulverCore -no-color-diagnostics -enable-testing -g -debug-info-format\=dwarf -dwarf-version\=4 -module-cache-path /Users/emiller/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -swift-version 5 -enforce-exclusivity\=checked -Onone -D DEBUG -serialize-debugging-options -const-gather-protocols-file /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/Objects-normal/arm64/taskchampShared_const_extract_protocols.json -enable-experimental-feature DebugDescriptionMacro -enable-bare-slash-regex -empty-abi-descriptor -validate-clang-modules-once -clang-build-session-file /Users/emiller/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -working-directory -Xcc /Users/emiller/src/personal/taskchamp -resource-dir /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift -enable-anonymous-context-mangled-names -file-compilation-dir /Users/emiller/src/personal/taskchamp -Xcc -ivfsstatcache -Xcc /Users/emiller/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/iphoneos18.5-22F76-7fa4eea80a99bbfdc046826b63ec4baf.sdkstatcache -Xcc -I/Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/taskchampShared-generated-files.hmap -Xcc -I/Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/taskchampShared-own-target-headers.hmap -Xcc -I/Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/taskchampShared-all-non-framework-target-headers.hmap -Xcc -ivfsoverlay -Xcc /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchamp-2988f7a37e15f38eee6ecab6b9b1a4d2-VFS-iphoneos/all-product-headers.yaml -Xcc -iquote -Xcc /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/taskchampShared-project-headers.hmap -Xcc -I/Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Products/Debug-iphoneos/include -Xcc -I/Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/DerivedSources-normal/arm64 -Xcc -I/Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/DerivedSources/arm64 -Xcc -I/Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/DerivedSources -Xcc -DDEBUG\=1 -module-name taskchampShared -frontend-parseable-output -disable-clang-spi -target-sdk-version 18.5 -target-sdk-name iphoneos18.5 -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin/swift-plugin-server -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/local/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin/swift-plugin-server -in-process-plugin-server-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/libSwiftInProcPluginServer.dylib -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/plugins -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/local/lib/swift/host/plugins -o /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Build/Intermediates.noindex/taskchamp.build/Debug-iphoneos/taskchampShared.build/Objects-normal/arm64/FileService.o -index-unit-output-path /taskchamp.build/Debug-iphoneos/taskchampShared.build/Objects-normal/arm64/FileService.o -index-store-path /Users/emiller/Library/Developer/Xcode/DerivedData/taskchamp-aooqdrnrgfyemzejhplmmdsptztz/Index.noindex/DataStore -index-system-modules

SwiftCompile normal arm64 /Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift (in target 'taskchampShared' from project 'taskchamp')
    cd /Users/emiller/src/personal/taskchamp
    

/Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift:38:9: error: cannot find 'baseURL' in scope
        baseURL = FileManager.default.urls(for: .documentDirectory, in: .userDomainMask)[0]
        ^~~~~~~
/Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift:39:57: error: cannot find 'baseURL' in scope
        logger.info("Using local documents directory: \(baseURL.path)")
                                                        ^~~~~~~
/Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift:44:29: error: cannot find 'baseURL' in scope
        let taskDirectory = baseURL.appendingPathComponent("task")
                            ^~~~~~~
/Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift:47:38: error: cannot find 'baseURL' in scope
        createDirectoryIfNeeded(url: baseURL)
                                     ^~~~~~~

/Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift:38:9: Cannot find 'baseURL' in scope

/Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift:39:57: Cannot find 'baseURL' in scope

/Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift:44:29: Cannot find 'baseURL' in scope

/Users/emiller/src/personal/taskchamp/taskchampShared/Sources/Services/FileService.swift:47:38: Cannot find 'baseURL' in scope



Build failed    7/22/25, 7:34 AM    1.7 seconds
